Add edit and delete buttons on Details Partial view

--- a/AddressBook/Views/Contacts/_Delete.cshtml
+++ b/AddressBook/Views/Contacts/_Delete.cshtml
@@ -10,7 +10,7 @@
                 <h4 class="card-title">@String.Format("{0} {1}", Model.LastName, Model.FirstName)</h4>
             </div>
             <div class="float-right">
-                <button type="button" class="btn btn-dark" onclick="$(this).closest('div[id=\'contact-view-panel\']').empty()">
+                <button id="close-contact-view-panel" type="button" class="btn btn-dark">
                     <i class="fa fa-times fa-2x" aria-hidden="true"></i>
                 </button>
             </div>
