--- a/AddressBook/Views/Contacts/_Create.cshtml
+++ b/AddressBook/Views/Contacts/_Create.cshtml
@@ -1,8 +1,15 @@
 ﻿@model AddressBook.ViewModels.ContactCreateViewModel
 
 <div class="card">
-    <div class="card-header bg-dark text-light">
-        <h4 class="card-title">Create Contact</h4>
+    <div class="card-header bg-dark text-light">        
+        <div class="float-left">
+            <h4 class="card-title">Create Contact</h4>
+        </div>
+        <div class="float-right">
+            <button id="close-contact-view-panel" type="button" class="btn btn-dark">
+                <i class="fa fa-times fa-2x" aria-hidden="true"></i>
+            </button>
+        </div>
     </div>
     <div class="card-body bg-light">
         @using (Html.BeginForm("Create", "Contacts", FormMethod.Post, new { id = "contact-crud", @class = "form-horizontal" }))
