--- a/AddressBook/Views/Contacts/_Details.cshtml
+++ b/AddressBook/Views/Contacts/_Details.cshtml
@@ -6,7 +6,7 @@
             <h4 class="card-title">@String.Format("{0} {1}", Model.LastName, Model.FirstName)</h4>
         </div>
         <div class="float-right">
-            <button type="button" class="btn btn-dark" onclick="$(this).closest('div[id=\'contact-view-panel\']').empty()">
+            <button id="close-contact-view-panel" type="button" class="btn btn-dark">
                 <i class="fa fa-times fa-2x" aria-hidden="true"></i>
             </button>
         </div>
@@ -139,10 +139,10 @@
             <div class="col-sm-12 col-md-12 col-lg-3">
                 <div class="row mb-1">
                     <div class="col-md-offset-2 col-md-10">
-                        <button id="edit-contact-btn" type="button" class="btn btn-primary">
+                        <button id="edit-contact-btn" type="button" class="btn btn-primary" data-target="@Model.ID">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit
                         </button>
-                        <button id="delete-contact-btn" type="button" class="btn btn-danger">
+                        <button id="delete-contact-btn" type="button" class="btn btn-danger" data-target="@Model.ID">
                             <i class="fa fa-trash-o" aria-hidden="true"></i> Delete
                         </button>
                     </div>
