--- a/AddressBook/Views/Contacts/_Delete.cshtml
+++ b/AddressBook/Views/Contacts/_Delete.cshtml
@@ -35,7 +35,7 @@
                                                 var otherPhones = Model.PhoneNumbers.Where(p => p.IsDefault == false || p.IsDefault == null);
                                             }
 
-                                            <i class="fa fa-phone" aria-hidden="true"></i> @defaultPhone.NumberType - @defaultPhone.Number
+                                            <i class="fa fa-phone" aria-hidden="true"></i> @defaultPhone.NumberType - <a href="@String.Format("tel:{0}", defaultPhone.Number)">@defaultPhone.Number</a>
                                             <a data-toggle="collapse" href="#collapsePhoneNumbers" aria-expanded="false" aria-controls="collapsePhoneNumbers" class="float-right text-dark">
                                                 <i class="fa fa-angle-down" aria-hidden="true"></i>
                                             </a>
@@ -46,7 +46,7 @@
                                             @foreach (var phone in otherPhones)
                                             {
                                                 <li class="list-group-item">
-                                                    <i class="fa fa-phone" aria-hidden="true"></i> @phone.NumberType - @phone.Number
+                                                    <i class="fa fa-phone" aria-hidden="true"></i> @phone.NumberType - <a href="@String.Format("tel:{0}", phone.Number)">@phone.Number</a>
                                                 </li>
                                             }
                                         </ul>
@@ -65,7 +65,7 @@
                                                 var otherEmails = Model.EmailAddresses.Where(e => e.IsDefault == false || e.IsDefault == null);
                                             }
 
-                                            <i class="fa fa-envelope" aria-hidden="true"></i> @defaultEmail.EmailAddressType - @defaultEmail.Address
+                                            <i class="fa fa-envelope" aria-hidden="true"></i> @defaultEmail.EmailAddressType - <a href="@String.Format("mailto:test@{0}", defaultEmail.Address)">@defaultEmail.Address</a> 
                                             <a data-toggle="collapse" href="#collapseEmails" aria-expanded="false" aria-controls="collapseEmails" class="float-right text-dark">
                                                 <i class="fa fa-angle-down" aria-hidden="true"></i>
                                             </a>
@@ -76,7 +76,7 @@
                                             @foreach (var email in otherEmails)
                                             {
                                                 <li class="list-group-item">
-                                                    <i class="fa fa-envelope" aria-hidden="true"></i> @email.EmailAddressType - @email.Address
+                                                    <i class="fa fa-envelope" aria-hidden="true"></i> @email.EmailAddressType - <a href="@String.Format("mailto:test@{0}", email.Address)">@email.Address</a> 
                                                 </li>
                                             }
                                         </ul>
