--- a/AddressBook/Views/Contacts/_Details.cshtml
+++ b/AddressBook/Views/Contacts/_Details.cshtml
@@ -27,8 +27,8 @@
                                             var defaultPhone = Model.PhoneNumbers.FirstOrDefault(p => p.IsDefault == true) ?? Model.PhoneNumbers.First();
                                             var otherPhones = Model.PhoneNumbers.Where(p => p.IsDefault == false || p.IsDefault == null);
                                         }
-
-                                        <i class="fa fa-phone" aria-hidden="true"></i> @defaultPhone.NumberType - @defaultPhone.Number
+                                                                                
+                                        <i class="fa fa-phone" aria-hidden="true"></i> @defaultPhone.NumberType - <a href="@String.Format("tel:{0}", defaultPhone.Number)">@defaultPhone.Number</a>
                                         <a data-toggle="collapse" href="#collapsePhoneNumbers" aria-expanded="false" aria-controls="collapsePhoneNumbers" class="float-right text-dark">
                                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                                         </a>
@@ -39,7 +39,7 @@
                                         @foreach (var phone in otherPhones)
                                         {
                                             <li class="list-group-item">
-                                                <i class="fa fa-phone" aria-hidden="true"></i> @phone.NumberType - @phone.Number
+                                                <i class="fa fa-phone" aria-hidden="true"></i> @phone.NumberType - <a href="@String.Format("tel:{0}", phone.Number)">@phone.Number</a>
                                             </li>
                                         }
                                     </ul>
@@ -57,8 +57,8 @@
                                             var defaultEmail = Model.EmailAddresses.FirstOrDefault(e => e.IsDefault == true) ?? Model.EmailAddresses.First();
                                             var otherEmails = Model.EmailAddresses.Where(e => e.IsDefault == false || e.IsDefault == null);
                                         }
-
-                                        <i class="fa fa-envelope" aria-hidden="true"></i> @defaultEmail.EmailAddressType - @defaultEmail.Address
+                                                                                 
+                                        <i class="fa fa-envelope" aria-hidden="true"></i> @defaultEmail.EmailAddressType - <a href="@String.Format("mailto:test@{0}", defaultEmail.Address)">@defaultEmail.Address</a> 
                                         <a data-toggle="collapse" href="#collapseEmails" aria-expanded="false" aria-controls="collapseEmails" class="float-right text-dark">
                                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                                         </a>
@@ -69,7 +69,7 @@
                                         @foreach (var email in otherEmails)
                                         {
                                             <li class="list-group-item">
-                                                <i class="fa fa-envelope" aria-hidden="true"></i> @email.EmailAddressType - @email.Address
+                                                <i class="fa fa-envelope" aria-hidden="true"></i> @email.EmailAddressType - <a href="@String.Format("mailto:test@{0}", email.Address)">@email.Address</a> 
                                             </li>
                                         }
                                     </ul>
